--- a/index.html
+++ b/index.html
@@ -194,6 +194,16 @@ tbody tr:hover .action-btn{opacity:1;visibility:visible;}
   background: var(--accent);color: var(--accent-contrast);cursor:pointer;font-size:13px;
 }
 #themeMenu button:hover {background: var(--accent-darker);}
+.flame {
+  display:inline-block;
+  animation:flicker 0.6s infinite alternate;
+}
+
+@keyframes flicker {
+  from { transform: translateY(0); }
+  to   { transform: translateY(-2px); }
+}
+
 </style>
 </head>
 <body>
@@ -292,6 +302,9 @@ tbody tr:hover .action-btn{opacity:1;visibility:visible;}
 const API_KEY="AIzaSyCbEV3CS9bOcxq5eK-QXbjczGHjvzyXS6M";
 const ROOT_FOLDER_ID="18QkQPyCZxTCAaoz_qd1wAelmQbSE4ex8";
 
+/* ----------- Config personnalisée ----------- */
+const FLAME_THRESHOLD = 50.0;   // seuil déclencheur de la flamme 🔥
+
 /* ----------- État ----------- */
 let imageFiles=[], currentImageIndex=0;
 let filterStartDate="", filterEndDate="";
@@ -336,18 +349,45 @@ async function fetchFolderContents(folderId){
 }
 
 async function loadRootFolders(){
-  const files=await fetchFolderContents(ROOT_FOLDER_ID);
-  const rootUL=document.getElementById('folderTree');
-  rootUL.innerHTML='';
-  files.filter(f=>f.mimeType==='application/vnd.google-apps.folder').forEach(f=>{
-    const li=document.createElement('li'); li.dataset.id=f.id;
-    const toggle=document.createElement('span'); toggle.className='folder-toggle'; toggle.textContent='+';
-    toggle.onclick=()=>toggleFolder(li);
-    const span=document.createElement('span'); span.className='folder-name'; span.textContent=f.name;
-    span.onclick=()=>loadFolderFilesOnClick(li);
-    li.appendChild(toggle); li.appendChild(span); rootUL.appendChild(li);
+  const files = await fetchFolderContents(ROOT_FOLDER_ID);
+  const rootUL = document.getElementById('folderTree');
+  rootUL.innerHTML = '';
+
+  files.filter(f => f.mimeType === 'application/vnd.google-apps.folder').forEach(f => {
+    const li = document.createElement('li'); 
+    li.dataset.id = f.id;
+
+    const toggle = document.createElement('span'); 
+    toggle.className = 'folder-toggle'; 
+    toggle.textContent = '+';
+    toggle.onclick = () => toggleFolder(li);
+
+    const span = document.createElement('span'); 
+    span.className = 'folder-name'; 
+    span.textContent = f.name;
+    span.onclick = () => loadFolderFilesOnClick(li);
+
+    li.appendChild(toggle); 
+    li.appendChild(span); 
+    rootUL.appendChild(li);
   });
+
+  // 🔥 Vérifier automatiquement deux crans plus bas sans ouvrir visuellement
+  setTimeout(async () => {
+    const siteFolders = document.querySelectorAll("#folderTree > li");
+
+    for (const siteLi of siteFolders) {
+      const subFolders = await fetchChildren(siteLi.dataset.id);
+      for (const sub of subFolders) {
+        if (sub.name.includes("Temp")) {
+          await checkTraçaTempToday(siteLi, sub.id); 
+        }
+      }
+    }
+  }, 1000);
 }
+
+
 
 async function toggleFolder(li){
   const toggle=li.querySelector('.folder-toggle');
@@ -359,16 +399,28 @@ async function toggleFolder(li){
   toggle.textContent='…';
   const files=await fetchFolderContents(li.dataset.id);
   const ul=document.createElement('ul');
-  files.filter(f=>f.mimeType==='application/vnd.google-apps.folder').forEach(f=>{
-    const childLi=document.createElement('li'); childLi.dataset.id=f.id;
-    const childToggle=document.createElement('span'); childToggle.className='folder-toggle'; childToggle.textContent='+';
-    childToggle.onclick=()=>toggleFolder(childLi);
-    const span=document.createElement('span'); span.className='folder-name'; span.textContent=f.name;
-    span.onclick=()=>loadFolderFilesOnClick(childLi);
-    childLi.appendChild(childToggle); childLi.appendChild(span); ul.appendChild(childLi);
-  });
+  files
+    .filter(f => f.mimeType === 'application/vnd.google-apps.folder')
+    .forEach(f =>{
+      const childLi=document.createElement('li'); childLi.dataset.id=f.id;
+      const childToggle=document.createElement('span'); childToggle.className='folder-toggle'; childToggle.textContent='+';
+      childToggle.onclick=()=>toggleFolder(childLi);
+      const span=document.createElement('span'); span.className='folder-name'; span.textContent=f.name;
+      span.onclick=()=>loadFolderFilesOnClick(childLi);
+      childLi.appendChild(childToggle); childLi.appendChild(span); ul.appendChild(childLi);
+
+      // ✅ vérifier tout dossier dont le nom contient "Temp"
+      if(f.name.includes("Temp")){ checkTraçaTempToday(li, f.id); }
+    });
   li.appendChild(ul); li.dataset.loaded='true'; toggle.textContent='+';
 }
+
+// Fonction utilitaire pour récupérer les sous-dossiers sans modifier l'affichage
+async function fetchChildren(folderId){
+  const files = await fetchFolderContents(folderId);
+  return files.filter(f => f.mimeType === 'application/vnd.google-apps.folder');
+}
+
 
 async function loadFolderFilesOnClick(li){
   await toggleFolder(li);
@@ -496,7 +548,7 @@ const zipTime=document.getElementById('zipTime');
 const zipClose=document.getElementById('zipClose');
 let zipCancelled=false, zipStartTime=0;
 
-function sanitizeFileName(name){ return name.replace(/[\/\\:*?"<>|]/g,"_"); }
+function sanitizeFileName(name){ return name.replace(/[\/\:*?"<>|]/g,"_"); }
 
 function showZipOverlay(name){
   zipCancelled=false;
@@ -672,6 +724,54 @@ function setTheme(theme){
     r.style.setProperty("--text","#4b0014");
     r.style.setProperty("--row-even","#f3cdd3");
     r.style.setProperty("--row-odd","#fff0f2");
+  }
+}
+
+/* ----------- 🔥 Vérif CSV du jour pour "Temp" ----------- */
+async function checkTraçaTempToday(parentLi, tracatempId) {
+  const today = new Date();
+  const yyyymmdd =
+    today.getFullYear().toString() +
+    String(today.getMonth() + 1).padStart(2, "0") +
+    String(today.getDate()).padStart(2, "0");
+
+  const files = await fetchFolderContents(tracatempId);
+  // accepter tout CSV contenant la date du jour
+  const todayFile = files.find(f => f.name.includes(yyyymmdd) && f.name.endsWith(".csv"));
+  if (!todayFile) return;
+
+  try {
+    const url = `https://www.googleapis.com/drive/v3/files/${todayFile.id}?alt=media&key=${API_KEY}`;
+    const res = await fetch(url);
+    const text = await res.text();
+
+    // lire les dernières lignes
+const lines = text.split(/\r?\n/).filter(l => l.trim() !== "");
+const lastLine = lines[lines.length - 1];
+if (!lastLine) return;
+
+// Nettoyage : enlever guillemets et espaces
+const cols = lastLine.split(",").map(c => c.replace(/"/g, "").trim());
+
+const v4 = parseFloat(cols[3]);
+const v6 = parseFloat(cols[5]);
+
+if ((v4 && v4 > FLAME_THRESHOLD) || (v6 && v6 > FLAME_THRESHOLD)) {
+  markFolderWithFlame(parentLi);
+}
+
+  } catch (e) {
+    console.error("Erreur lecture CSV dans Temp", e);
+  }
+}
+
+function markFolderWithFlame(li) {
+  const span = li.querySelector(".folder-name");
+  if (span && !span.innerHTML.startsWith("🔥")) {
+    span.innerHTML = `<span class="flame">🔥</span> ` + span.innerHTML;
+  }
+  if (li.parentElement && li.parentElement.closest("li")) {
+    markFolderWithFlame(li.parentElement.closest("li"));
   }
 }
 
