--- a/viewer02.html
+++ b/viewer02.html
@@ -191,14 +191,24 @@
     return dt.getFullYear()+String(dt.getMonth()+1).padStart(2,"0")+String(dt.getDate()).padStart(2,"0");
   }
   function makeSortKey(iso,t){return new Date(`${iso}T${t||"00:00:00"}`).getTime();}
-  function dedupeHeaders(arr){
-    const hc={};
-    return arr.map(h=>{
-      const k=(h==null?"":String(h));
-      if(hc[k]){hc[k]++; if(hc[k]===2) return `${k} Valeur`; return `${k}_${hc[k]}`;}
-      hc[k]=1; return `${k} Consigne`;
-    });
-  }
+function dedupeHeaders(arr) {
+  const hc = {};
+  return arr.map(h => {
+    const k = (h == null ? "" : String(h));
+    hc[k] = (hc[k] || 0) + 1;
+
+    // Règle spéciale uniquement pour les colonnes contenant "SONDE"
+    if (k.toUpperCase().includes("SONDE")) {
+      if (hc[k] === 1) return `${k} Consigne`;
+      if (hc[k] === 2) return `${k} Valeur`;
+      return `${k}_${hc[k]}`;
+    }
+
+    // Sinon : on garde le nom original, en ajoutant un suffixe si doublon
+    return hc[k] === 1 ? k : `${k}_${hc[k]}`;
+  });
+}
+
   function capitalizeFirst(s){return s? s.charAt(0).toUpperCase()+s.slice(1):s;}
   function dayLabelFR(ts){
     const nd=new Date(ts);
@@ -541,7 +551,3 @@
 
 </body>
 </html>
-
-
-
-
