--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@ if (f.size) {
 
   if (parseInt(f.size) < 200) {
     tdSize.style.color = "#999";      // gris clair
-    tdSize.textContent += " (vide)";  // ajoute le tag
+    tdSize.textContent += "  🚫";  // ajoute le tag
   } else {
     tdSize.style.color = "inherit";   // couleur normale
   }
