--- a/viewer02.html
+++ b/viewer02.html
@@ -138,6 +138,7 @@
     <button id="exportPDF" style="display:none;">📄 Exporter PDF</button>
     <button id="resetZoom" style="display:none;">🔄 Réinitialiser zoom</button>
     <button id="smoothBtn" style="display:none;">✨ Lissage OFF</button>
+    <button id="toggleZ3" style="display:none;">🚨 Événements Z3 OFF</button>
   </div>
 
   <!-- === PARTIE 5 : Sélecteurs === -->
@@ -159,6 +160,7 @@
 
     <div style="flex:1; display:flex; flex-direction:column; align-items:center;">
       <canvas id="myChart" width="1600" height="800"></canvas>
+      <input type="color" id="colorPicker" style="display:none;" />
       <div id="dateLabels" style="text-align:center; margin-top:8px; font-weight:bold; color:var(--danger);"></div>
     </div>
 
@@ -169,7 +171,7 @@
   </div>
 
   <!-- === PARTIE 7 : Aides/états === -->
-  <div id="zoomInfo">🔍 Sélectionner une zone avec le clic gauche pour zoomer</div>
+  <div id="zoomInfo">🔍 Sélectionner une zone (drag) pour zoomer, molette+Ctrl pour zoom, Ctrl+clic sur la courbe pour changer sa couleur</div>
   <div id="spinner"></div>
   <div id="errorBox">
     ⚠️ Impossible de charger le fichier.<br>Vérifiez la connexion ou réessayez plus tard.<br><br>
@@ -205,6 +207,10 @@
   let baseFileName="", baseFileId="", headers=[], timeField="", baseDateYYYYMMDD="";
   let colors=[]; let themeMenuTimer;
   let loadedDays=new Set(); let saMeta=null;
+
+  // Z3
+  let z3Events = []; // {time: Date, label: string}
+  let z3Visible = false;
 
   /* ===================== THEME ===================== */
   function applyThemeVars(vars){
@@ -389,12 +395,14 @@
   function buildDatasets(){
     const smooth = localStorage.getItem("smooth") === "1";
     return currentY.map((yCol,i)=>{
+      // valeurs brutes
       let pts = csvData.map(r=> {
         const x = r.__sortKey;
         const y = r[yCol];
         return (Number.isFinite(x) && typeof y === 'number') ? {x,y} : null;
       }).filter(Boolean);
 
+      // valeurs affichées
       if (smooth) pts = movingAverage(pts, 10);
 
       const c = colors[i%colors.length];
@@ -406,88 +414,225 @@
         fill: false,
         tension: 0,
         pointRadius: 0,
-        pointHoverRadius: 5
+        pointHoverRadius: 5,
+        pointHitRadius: 8
       };
     });
   }
 
-  function drawChart(){
-    if(!csvData.length||!timeField||!currentY.length) return;
-    const ctx=document.getElementById('myChart').getContext('2d');
+  // Plugin fond alterné par jour + labels dates
+  const dayBackgroundPlugin={
+    id:'dayBackground',
+    beforeDraw(chart){
+      const {scales:{x},chartArea}=chart;
+      if(!x||!isFinite(x.min)||!isFinite(x.max)) return;
+      const oneDay=86400000;
+      let start=new Date(x.min); start.setHours(0,0,0,0);
+      let toggle=false;
+      const ctx=chart.ctx; ctx.save();
 
-    const allX=csvData.map(r=>r.__sortKey).filter(v=>Number.isFinite(v));
-    const minX=Math.min(...allX), maxX=Math.max(...allX);
-
-    const datasets = buildDatasets();
-
-    const dayBackgroundPlugin={
-      id:'dayBackground',
-      beforeDraw(chart){
-        const {scales:{x},chartArea}=chart;
-        if(!x||!isFinite(x.min)||!isFinite(x.max)) return;
-        const oneDay=86400000;
-        let start=new Date(x.min); start.setHours(0,0,0,0);
-        let toggle=false;
-        const ctx=chart.ctx; ctx.save();
-
-        for(let d=start.getTime(); d<x.max; d+=oneDay){
-          const from=x.getPixelForValue(d), to=x.getPixelForValue(d+oneDay);
-          ctx.fillStyle=toggle? (getCSSVar('--accent-muted')||'rgba(255,112,67,0.12)') : 'rgba(0,0,0,0.02)';
-          ctx.fillRect(from, chartArea.top, to-from, chartArea.bottom-chartArea.top);
-          toggle=!toggle;
-        }
-        ctx.restore();
-
-        const labels=[];
-        for(let d=start.getTime(); d<x.max; d+=oneDay){labels.push(dayLabelFR(d));}
-        const dl=document.getElementById('dateLabels'); if(dl) dl.textContent = labels.join(" | ");
+      for(let d=start.getTime(); d<x.max; d+=oneDay){
+        const from=x.getPixelForValue(d), to=x.getPixelForValue(d+oneDay);
+        ctx.fillStyle=toggle? (getCSSVar('--accent-muted')||'rgba(255,112,67,0.12)') : 'rgba(0,0,0,0.02)';
+        ctx.fillRect(from, chartArea.top, to-from, chartArea.bottom-chartArea.top);
+        toggle=!toggle;
       }
-    };
+      ctx.restore();
 
-    if(chart) chart.destroy();
-    chart=new Chart(ctx,{
-      type:'line',
-      data:{datasets},
-      options:{
-        responsive:true,
-        maintainAspectRatio:false,
-        interaction:{mode:'nearest',axis:'x',intersect:false},
-        plugins:{
-          legend:{position:'top'},
-          datalabels:{display:false},
-          zoom:{
-            zoom:{wheel:{enabled:true,modifierKey:'ctrl'},pinch:{enabled:true},drag:{enabled:true,mode:'x'}},
-            pan:{enabled:true,mode:'x'}
-          },
-          tooltip:{
-            callbacks:{
-              title:(items)=>{
-                if(!items?.length) return '';
-                const d=new Date(items[0].parsed.x);
-                return `${String(d.getHours()).padStart(2,'0')}:${String(d.getMinutes()).padStart(2,'0')}`;
-              }
-            }
-          }
-        },
-        scales:{
-          x:{
-            type:'time',
-            min:Number.isFinite(minX)?minX:undefined,
-            max:Number.isFinite(maxX)?maxX:undefined,
-            time:{unit:'hour',tooltipFormat:'HH:mm',displayFormats:{hour:'HH:mm',minute:'HH:mm'}},
-            ticks:{autoSkip:true,callback:(value)=>{
-              const d=new Date(value);return `${String(d.getHours()).padStart(2,'0')}:${String(d.getMinutes()).padStart(2,'0')}`;
-            }}
-          },
-          y:{title:{display:true,text:'Valeurs'}}
-        }
-      },
-      plugins:[ChartDataLabels,dayBackgroundPlugin]
+      const labels=[];
+      for(let d=start.getTime(); d<x.max; d+=oneDay){labels.push(dayLabelFR(d));}
+      const dl=document.getElementById('dateLabels'); if(dl) dl.textContent = labels.join(" | ");
+    }
+  };
+
+// Plugin lignes Z3 avec tooltip au survol
+const z3LinesPlugin = {
+  id: 'z3Lines',
+  afterDatasetsDraw(chartArg){
+    if(!z3Visible || !z3Events.length) return;
+    const xScale = chartArg.scales.x;
+    const { top, bottom } = chartArg.chartArea;
+    const ctx = chartArg.ctx;
+    ctx.save();
+    ctx.strokeStyle = 'red';
+    ctx.lineWidth = 1;
+
+    // dessiner les lignes
+    z3Events.forEach(ev => {
+      const x = xScale.getPixelForValue(ev.time.getTime());
+      if (x >= xScale.left && x <= xScale.right) {
+        ctx.beginPath();
+        ctx.moveTo(x, top);
+        ctx.lineTo(x, bottom);
+        ctx.stroke();
+      }
     });
 
-    chart.update();
-    applyAdaptiveTicks();
+    // gestion survol → tooltip
+    const mouse = chartArg.$z3Mouse;
+    if(mouse){
+      let nearest = null, dist = Infinity;
+      z3Events.forEach(ev=>{
+        const x = xScale.getPixelForValue(ev.time.getTime());
+        const d = Math.abs(mouse.x - x);
+        if(d < 6 && d < dist){ // 6 px de tolérance
+          nearest = {ev,x};
+          dist=d;
+        }
+      });
+      if(nearest){
+        const {ev,x} = nearest;
+        const tooltipY = top + 20;
+        ctx.fillStyle = 'rgba(255,255,255,0.9)';
+        ctx.strokeStyle = 'red';
+        ctx.lineWidth = 1;
+        ctx.font = '12px sans-serif';
+        const text = ev.label;
+        const w = ctx.measureText(text).width + 10;
+        ctx.beginPath();
+        ctx.rect(x - w/2, tooltipY - 14, w, 20);
+        ctx.fill();
+        ctx.stroke();
+        ctx.fillStyle = 'red';
+        ctx.textAlign = 'center';
+        ctx.textBaseline = 'middle';
+        ctx.fillText(text, x, tooltipY - 4);
+      }
+    }
+
+    ctx.restore();
   }
+};
+
+
+  async function loadZ3IfAvailable(){
+    z3Events = [];
+    if (!saMeta) return false;
+    const list = JSON.parse(localStorage.getItem("csvFilesList") || "[]");
+    const expectedZ = `Z3${saMeta.num}_${saMeta.date}.csv`.toLowerCase();
+    const f = list.find(x => String(x.name || "").toLowerCase() === expectedZ);
+    if (!f) return false;
+
+    const parsedZ = await loadCSVByFileId(f.id);
+    if (!parsedZ || !parsedZ.data || parsedZ.data.length < 1) return false;
+
+    // Détection souple des lignes d'en-tête
+    let headerRowIdx = 0;
+    for (let i=0;i<Math.min(5, parsedZ.data.length);i++){
+      const row = parsedZ.data[i] || [];
+      const joined = row.map(v => String(v||'')).join('|').toLowerCase();
+      if (joined.includes('trigger') && (joined.includes('time') || joined.includes('date'))) {
+        headerRowIdx = i;
+        break;
+      }
+    }
+    const headersZ = parsedZ.data[headerRowIdx];
+    const rows = parsedZ.data.slice(headerRowIdx+1);
+
+    // indices colonnes
+    const idxDate = headersZ.findIndex(h => String(h||'').toLowerCase().includes('trigger') && String(h||'').toLowerCase().includes('date'));
+    const idxTime = headersZ.findIndex(h => String(h||'').toLowerCase().includes('trigger') && String(h||'').toLowerCase().includes('time'));
+    let idxMsg  = headersZ.findIndex(h => String(h||'').toLowerCase().includes('message'));
+    if (idxMsg === -1) idxMsg = headersZ.findIndex(h => String(h||'').toLowerCase().includes('event'));
+
+    rows.forEach(r => {
+      const dateStr = r[idxDate];
+      const timeStr = r[idxTime];
+      const label = r[idxMsg] || 'Événement';
+      if (!dateStr || !timeStr) return;
+      // support "20/09/25" ou "2025-09-20"
+      let dt;
+      if (typeof dateStr === 'string' && dateStr.includes('/')){
+        const [d,m,y] = String(dateStr).split('/');
+        const iso = `20${y}-${m}-${d}T${String(timeStr)}`;
+        dt = new Date(iso);
+      }else{
+        dt = new Date(`${String(dateStr)}T${String(timeStr)}`);
+      }
+      if (!isNaN(dt.getTime())) z3Events.push({ time: dt, label: String(label) });
+    });
+
+    // Afficher le bouton
+    const btn = document.getElementById('toggleZ3');
+    btn.style.display = 'inline-block';
+    return true;
+  }
+
+  function drawChart(){
+  if(!csvData.length||!timeField||!currentY.length) return;
+  const ctx=document.getElementById('myChart').getContext('2d');
+
+  const allX=csvData.map(r=>r.__sortKey).filter(v=>Number.isFinite(v));
+  const minX=Math.min(...allX), maxX=Math.max(...allX);
+
+  const datasets = buildDatasets();
+
+  if(chart) chart.destroy();
+  chart=new Chart(ctx,{
+    type:'line',
+    data:{datasets},
+    options:{
+      responsive:true,
+      maintainAspectRatio:false,
+      parsing:false,
+      interaction:{mode:'nearest',axis:'x',intersect:false},
+      plugins:{
+        legend:{position:'top'},
+        datalabels:{display:false},
+        zoom:{
+          zoom:{
+            wheel:{enabled:true,modifierKey:'ctrl'},
+            pinch:{enabled:true},
+            drag:{enabled:true, mode:'x'}
+          },
+          pan:{enabled:true,mode:'x'}
+        },
+        tooltip:{
+          callbacks:{
+            title:(items)=>{
+              if(!items?.length) return '';
+              const d=new Date(items[0].parsed.x);
+              return `${String(d.getHours()).padStart(2,'0')}:${String(d.getMinutes()).padStart(2,'0')}`;
+            }
+          }
+        }
+      },
+      scales:{
+        x:{
+          type:'time',
+          min:Number.isFinite(minX)?minX:undefined,
+          max:Number.isFinite(maxX)?maxX:undefined,
+          time:{unit:'hour',tooltipFormat:'HH:mm',displayFormats:{hour:'HH:mm',minute:'HH:mm'}},
+          ticks:{autoSkip:true,callback:(value)=>{
+            const d=new Date(value);
+            return `${String(d.getHours()).padStart(2,'0')}:${String(d.getMinutes()).padStart(2,'0')}`;
+          }}
+        },
+        y:{title:{display:true,text:'Valeurs'}}
+      }
+    },
+    plugins:[ChartDataLabels,dayBackgroundPlugin,z3LinesPlugin]
+  });
+
+  // === AJOUT ICI ===
+  const canvas = chart.canvas;
+  canvas.addEventListener('mousemove', (e)=>{
+    const rect = canvas.getBoundingClientRect();
+    const x = e.clientX - rect.left;
+    const y = e.clientY - rect.top;
+    chart.$z3Mouse = {x,y};
+    chart.update('none');
+  });
+  canvas.addEventListener('mouseleave', ()=>{
+    chart.$z3Mouse = null;
+    chart.update('none');
+  });
+  // === FIN AJOUT ===
+
+  chart.update();
+  applyAdaptiveTicks();
+}
+
 
   /* ===================== UI ===================== */
   document.getElementById('backBtn').onclick=()=>window.close();
@@ -496,7 +641,29 @@
   document.getElementById("yColumnsContainer").addEventListener("change", () => {
     currentX = document.getElementById('xColumn').value;
     currentY = Array.from(document.querySelectorAll("#yColumnsContainer input:checked")).map(cb => cb.value);
-    if (currentY.length) drawChart();
+    if (currentY.length) {
+      drawChart();
+    }
+  });
+
+  // Ctrl+clic → changer la couleur du dataset le plus proche
+  const colorPickerEl = document.getElementById('colorPicker');
+  document.getElementById('myChart').addEventListener('click', (ev)=>{
+    if (!ev.ctrlKey || !chart) return;
+    const points = chart.getElementsAtEventForMode(ev, 'nearest', {intersect:false}, true);
+    if (!points || !points.length) return;
+    const el = points[0];
+    const datasetIndex = el.datasetIndex;
+    colorPickerEl.oninput = (e)=>{
+      const newColor = e.target.value;
+      const ds = chart.data.datasets[datasetIndex];
+      ds.borderColor = newColor;
+      ds.pointBackgroundColor = newColor;
+      ds.pointBorderColor = newColor;
+      chart.update('none');
+    };
+    // ouvrir le color picker
+    colorPickerEl.click();
   });
 
   // Reset zoom
@@ -520,6 +687,15 @@
     localStorage.setItem("smooth", smooth ? "0" : "1");
     updateSmoothBtnUI();
     if (currentY.length) drawChart();
+  };
+
+  // Bouton ON/OFF Z3
+  document.getElementById('toggleZ3').onclick = () => {
+    z3Visible = !z3Visible;
+    const btn = document.getElementById('toggleZ3');
+    btn.textContent = z3Visible ? '🚨 Événements Z3 ON' : '🚨 Événements Z3 OFF';
+    btn.style.background = z3Visible ? getCSSVar('--accent-darker') : getCSSVar('--accent');
+    if (chart) chart.update('none');
   };
 
   /* ===================== EXTEND / PAN ===================== */
@@ -550,7 +726,7 @@
 
     if (loaded) {
       csvData.sort((a,b)=>(a.__sortKey||0)-(b.__sortKey||0));
-      if (currentY.length) chart.data.datasets = buildDatasets();
+      if (currentY.length) drawChart();
       saMeta.date = targetDate;
       chart.options.scales.x.min = targetMin;
       chart.options.scales.x.max = targetMax;
@@ -558,6 +734,8 @@
       chart.options.scales.y.max = undefined;
       chart.update('none');
       applyAdaptiveTicks();
+      // Recharger les Z3 de la nouvelle date
+      await loadZ3IfAvailable();
     } else {
       const d=`${targetDate.slice(6,8)}/${targetDate.slice(4,6)}/${targetDate.slice(0,4)}`;
       alert(`Aucun fichier disponible pour la date ${d}`);
@@ -576,6 +754,7 @@
     }
     csvData.sort((a,b)=>(a.__sortKey||0)-(b.__sortKey||0));
     if(currentY.length) drawChart();
+    await loadZ3IfAvailable();
   }
 
   let modalResolve=null, modalDirection=0;
@@ -675,6 +854,17 @@
 
     await loadCSVFromDrive();
 
+    // Dessiner si des Y sont déjà mémorisés ? (on attend le clic utilisateur)
+    // -> rien, on laisse l'utilisateur cocher.
+
+    // Charger Z3 (si dispo) mais masquer par défaut
+    await loadZ3IfAvailable();
+    z3Visible = false;
+    const btn = document.getElementById('toggleZ3');
+    if (btn.style.display !== 'none') {
+      btn.textContent = '🚨 Événements Z3 OFF';
+    }
+
     // aide zoom temporaire
     document.getElementById('zoomInfo').style.display='block';
     setTimeout(()=>{document.getElementById('zoomInfo').style.display='none';},5000);
@@ -693,5 +883,6 @@
   </script>
 </body>
 </html>
+
 
 
